added new version of rock paper scissors

--- a/index.html
+++ b/index.html
@@ -243,9 +243,7 @@
   <div class="hero">
 
     <div class="bio">
-      <!-- <img src="https://cdn.pixabay.com/photo/2018/05/08/08/44/artificial-intelligence-3382507__480.jpg" style="height: 100px; width: 100px" alt="head shot"> -->
-      <!-- <h1 class="bio_content">BIO</h1>
-                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem fugiat laudantium odit, necessitatibus possimus inventore ut alias provident, sint quod non aut sed voluptatibus cum facilis aliquam eligendi? Molestias, consequuntur?</p> -->
+ 
 
 
     </div>
@@ -264,10 +262,9 @@
               <div class="card">
                 <div class="photo"></div>
                 <div class="photo-back">
-                  <a href="#"><i class="fas fa-phone"></i></a>
-                  <a href="#"><i class="fas fa-at"></i></a>
-                  <!-- <a href="#"><i class="fas fa-phone"></i></a> -->
-                  <!-- <a href="#"><i class="fab fa-youtube"></i></a> -->
+                  <a href="tel:856-236-9293"><i class="fas fa-phone"></i></a>
+                  <a href="mailto: strickland1514@gmail.com"><i class="fas fa-at"></i></a>
+                 
                 </div>
               </div>
             </div>
@@ -278,15 +275,15 @@
           </div>
           <div class="bottom">
             <a href="http://linkedin.com/in/michaeladamstrickland"><i class="fas fa-link"></i>Website</a>
-            <a href="#"><i class="fas fa-share-alt-square"></i>Share</a>
+            <a href="https://michaeladamstrickland.github.io/Portfolio/"><i class="fas fa-share-alt-square"></i>Share</a>
             <a href="#"><i class="fas fa-user-plus"></i>Follow</a>
-            <a href="#"><i class="fas fa-briefcase"></i>Hire</a>
+            <a href="assets/Michael strickland.docx"><i class="fas fa-briefcase"></i>Hire</a>
           </div>
         </div>
         <div class="right">
           <a id="active" href="#content"><i class="fas fa-user-graduate"></i>Profile</a>
           <a href="#projects"><i class="fas fa-th-large"></i>Projects</a>
-          <a href="#accordion"><i class="fas fa-chart-pie"></i>Skills</a>
+          <a href="#skills"><i class="fas fa-chart-pie"></i>Skills</a>
         </div>
       </div>
 
@@ -300,29 +297,23 @@
     <div class="body-text">
       
       <h2><img src="assets/images/photo2.jpg" alt="head shot" style="height: 200px; width: 240px"></h2>
-      <h2>Bio</h2>
+      <h2>My Passion</h2>
 
 
       <p data-300-center-top="transform: scale(0.8); opacity: 0"
         data-300-center-center="transform: scale(1); opacity: 1">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-        accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-        enim.
+        At the very first time I wrote any code I knew this was the right carrer path for me, and I just couldn't wait to learn more. The day to day chellenges that come with development keep me always wanting more.
       </p>
 
 
       <p data-200-center-top="transform: scale(0.8); opacity: 0"
         data-200-center-center="transform: scale(1); opacity: 1">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-        accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-        enim.
+        Working with technology like JavaScript, MySQL, NodeJs, And React have been such an amazing and eye opening experience. I have been able to build some amazing things, and can not wait to see what I get to work on next.
       </p>
 
       <p data-100-center-top="transform: scale(0.8); opacity: 0"
         data-100-center-center="transform: scale(1); opacity: 1">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-        accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-        enim.
+       I work as a Full Stack Web Developer with a true passion for both front-end and back-end development. I love the art that comes with front-end, and the percision and challenges that come with the back-end.
       </p>
 
     </div>
@@ -332,34 +323,7 @@
   </section>
 
 
-  <!-- bio content -->
-  <!-- <div class="body-text">
 
-    <h2>Bio</h2>
-
-    <p data-300-center-top="transform: scale(0.8); opacity: 0" data-300-center-center="transform: scale(1); opacity: 1">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-      accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-      enim.
-    </p>
-
-
-    <p data-200-center-top="transform: scale(0.8); opacity: 0" data-200-center-center="transform: scale(1); opacity: 1">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-      accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-      enim.
-    </p>
-
-    <p data-100-center-top="transform: scale(0.8); opacity: 0" data-100-center-center="transform: scale(1); opacity: 1">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-      accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-      enim.
-    </p>
-
-  </div>
-
-  </div> -->
-  <!-- end bio -->
 
   <hr>
   <div id="projects">
@@ -368,49 +332,49 @@
       <ul>
         <li tabindex="1">
           <div>
-            <a href="projects/word-guess-game/hangman-game/index.html">
-              <h2>Word Guess</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="portfolio/portfolio.html">
+              <h2>HangMan</h2>
+              <p>Hangman is a football style word guess game. guess right and the letter appears. guess wrong too many times and lose.</p>
             </a>
           </div>
         </li>
         <li tabindex="2">
           <div>
-            <a href="#">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="portfolio/portfolio.html">
+              <h2>TriviaGame</h2>
+              <p>This is a NBA style TriviaGame intended tp test your basketball knowledge</p>
             </a>
           </div>
         </li>
         <li tabindex="3">
           <div>
-            <a href="#">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="portfolio/portfolio.html">
+              <h2>The Office Fan Page</h2>
+              <p>This is a fun site that gives the fans everything they want and love about the TV show "The Office".</p>
             </a>
           </div>
         </li>
         <li tabindex="4">
           <div>
-            <a href="#">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="portfolio/portfolio.html">
+              <h2>GifTastic</h2>
+              <p>This is a fun app that generates funny gifs to keep you entertained for hours.</p>
             </a>
           </div>
         </li>
         <li tabindex="5">
           <div>
-            <a href="#">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="portfolio/portfolio.html">
+              <h2>Rock Paper Scissors</h2>
+              <p>This is a game of chance that you get to play against the computer.</p>
             </a>
           </div>
         </li>
         <li tabindex="6">
           <div>
-            <a href="#">
-              <h2>Lorem Ipsum</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <a href="portfolio/portfolio.html">
+              <h2>Eye Inventory Managment App</h2>
+              <p>Eye Managment is an inventory app that connects distributors and clients directly.</p>
             </a>
           </div>
         </li>
@@ -421,39 +385,7 @@
 
 
   <section class="parallax">
-    <!-- <div class="frontpage_text">
-      <img src="images/" alt="" srcset="">
-    </div>
-  </section>
-  <section id="content">
-    <div class="body-text">
-
-      <h2>Bio</h2>
-
-      <p data-300-center-top="transform: scale(0.8); opacity: 0"
-        data-300-center-center="transform: scale(1); opacity: 1">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-        accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-        enim.
-      </p>
-
-
-      <p data-200-center-top="transform: scale(0.8); opacity: 0"
-        data-200-center-center="transform: scale(1); opacity: 1">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-        accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-        enim.
-      </p>
-
-      <p data-100-center-top="transform: scale(0.8); opacity: 0"
-        data-100-center-center="transform: scale(1); opacity: 1">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida in odio vel tincidunt. Fusce quis lectus
-        accumsan, accumsan nibh sed, aliquet purus. In vitae velit eu est cursus malesuada sed ut nibh. Curabitur a leo
-        enim.
-      </p>
-
-    </div>
-  </section> -->
+   
   <section class="parallax "></section>
   </div>
   </section>
@@ -473,20 +405,21 @@
 
     <div data-100-bottom-top="transform: translateY(200px); opacity: 0"
       data-center-top="transform: translateY(0px); opacity: 1">
-      <i class="fab fa-github" href="#"></i></i>
+      <i class="fab fa-github" href="https://github.com/michaeladamstrickland"></i></i>
       <h4>Git<b>Hub</b></h4>
     </div>
 
     <div data-100-bottom-top="transform: translateX(200px); opacity: 0"
       data-center-top="transform: translateX(0px); opacity: 1">
-      <i class="far fa-file" href="#"></i>
+      <i class="far fa-file" href="assets/Michael strickland.docx"></i>
       <h4>Resume</b></h4>
     </div>
 
   </div>
 
   <hr>
-  <div class="about-us">
+  <div id="skills">
+    <div class="about-us">
 
     <h2>Skills/ Languages</h2>
 
@@ -520,170 +453,14 @@
       <img src="https://image.flaticon.com/icons/svg/888/888847.svg" alt="avatar">
     </div>
 
-    <div data-150-bottom-center="transform: rotateY(-90deg); opacity: 0"
-      data-150-center-center="transform: rotate(0); opacity: 1">
-      <img src="https://image.flaticon.com/icons/svg/919/919825.svg" alt="avatar">
-    </div>
-
-    <div data-100-bottom-center="transform: rotateY(-90deg); opacity: 0"
-      data-100-center-center="transform: rotate(0); opacity: 1">
-      <img src="https://image.flaticon.com/icons/svg/919/919836.svg" alt="avatar">
-    </div>
-
-    <div data-50-bottom-center="transform: rotateY(-90deg); opacity: 0"
-      data-50-center-center="transform: rotate(0); opacity: 1">
-      <img src="https://image.flaticon.com/icons/svg/888/888847.svg" alt="avatar">
-    </div>
 
 
 
 
   </div>
+</div>
   <hr>
-  <!-- <h1>Animated Graphs</h1> 
-<h2>Scroll Triggered, Responsive, Data-driven</h2>  
-<p>&nbsp;</p> 
-
-<div class="chartBarsWrap">
-    <div class="chartBars chartBars1">
-        <ul class="numbers">
-            <li><span>100%</span></li>
-            <li><span>80%</span></li>
-            <li><span>60%</span></li>
-            <li><span>40%</span></li>
-            <li><span>20%</span></li>
-            <li><span>0%</span></li>
-        </ul>
-        <ul class="bars">
-            <li>
-                <span class="tooltip"> 
-                <span class="tooltipContent">Very important info that you should read!</span>
-                <div data-percentage="52" class="bar greenBar trigger"></div>
-                </span>
-                <b>Alpha</b>
-            </li>
-            <li>
-                <span class="tooltip">  
-                <span class="tooltipContent">This one is trending well.</span>
-                <div data-percentage="83" class="bar blueBar trigger"></div>
-                </span> 
-                <b>Beta</b> 
-            </li>
-            <li>
-                <span class="tooltip"> 
-                <span class="tooltipContent">I like cheese!</span>
-                <div data-percentage="94" class="bar orangeBar trigger"></div>
-                </span>
-                <b>Gamma</b>
-            </li>
-            <li>
-                <span class="tooltip"> 
-                <span class="tooltipContent">Monkey's are funny!</span> 
-                <div data-percentage="64" class="bar purpleBar trigger"></div>    
-                </span>
-                <b>Delta</b>   
-            </li>
-        </ul>
-    </div>
-</div>
-
-<p>Bacon ipsum do lor amet porchetta jowl jerky short loin, tri-tip flank c ow. Strip steak meat ball picanha t-bone pork loin filet mignon, pancetta jerky kielba sa sirloin ball t ip hamburger turkey pork belly ham hock. Chicken swine tail s pa re ribs,pork loin tongue picanha strip steak ribeye pancetta bresaola landjaeger flank ham shank. Picanha t-bone meatball, corned beef tail tri-tip flank capicola alcatra spare ribs. Flank tail pork loin pork belly sirloin tri-tip.</p>
-
-<h3>Responsive? Yep.</h3>
-
-<div class="chartBarsWrap"> -->
-  <!-- <div class="chartBars chartBars2"> 
-        <ul class="numbers">
-            <li><span>100%</span></li>
-            <li><span>80%</span></li>
-            <li><span>60%</span></li>
-            <li><span>40%</span></li>   
-            <li><span>20%</span></li> 
-            <li><span>0%</span></li>
-        </ul>
-        <ul class="bars">
-            <li>
-                <div data-percentage="92" class="bar greenBar trigger"></div><b>Alpha</b></li><li> 
-    <div data-percentage="33" class="bar orangeBar trigger"></div><b>Beta</b></li>
-<li>
-    <div data-percentage="64" class="bar blueBar trigger"></div><b>Gamma</b></li>
-<li>
-    <div data-percentage="44" class="bar purpleBar trigger"></div>
-    <b>Delta</b></li>
-        </ul>
-    </div>
-</div> -->
-
-  <!-- <p>Bacon ipsum do lor amet porchetta jowl jerky short loin, tri-tip flank c ow. Strip steak meat ball picanha t-bone pork loin filet mignon, pancetta jerky kielba sa sirloin ball t ip hamburger turkey pork belly ham hock. Chicken swine tail s pa re ribs, pork loin tongue picanha strip steak ribeye pancetta bresaola landjaeger flank ham shank. Picanha t-bone meatball, corned beef tail tri-tip flank capicola alcatra spare ribs. Flank tail pork loin pork belly sirloin tri-tip. Bresaola salmi.</p>
-
-<h3>Radial Graphs</h3>   
- 
-<div class="box-piesite">
-    <ul>
-        <li class="design">
-            <div class="piesite" id="pie_0" data-pie="82"></div>
-        </li>
-        <li class="usability">
-            <div class="piesite" id="pie_2" data-pie="55"></div>
-        </li>
-        <li class="creativity">
-            <div class="piesite" id="pie_1" data-pie="33"></div>
-        </li>
-    </ul>
-</div>
-
-<p>Bacon ipsum do lor amet porchetta jowl jerky short loin, tri-tip flank c ow. Strip steak meat ball picanha t-bone pork loin filet mignon, pancetta jerky kielba sa sirloin ball t ip hamburger turkey pork belly ham hock. Chicken swine tail s pa re ribs,pork loin tongue picanha strip steak ribeye pancetta bresaola landjaeger flank ham shank. Picanha t-bone meatball, corned beef tail tri-tip flank capicola alcatra spare ribs. Flank tail pork loin pork belly sirloin tri-tip..</p> -->
-  <!-- <p>&nbsp;</p>  -->
-
-  <!-- <h3>Horizontal</h3>   
- 
-<div class="chartBarsWrap chartBarsHorizontal"> 
-    <div class="chartBars"> 
-        <ul class="bars">  
-            <li> 
-                <div data-percentage="92" class="bar greenBarFlat"></div><b>Alpha</b></li>
-            <li>
-                <div data-percentage="33" class="bar orangeBarFlat"></div><b>Beta</b></li>
-            <li>
-                <div data-percentage="64" class="bar blueBarFlat"></div><b>Gamma</b></li>
-            <li>
-                <div data-percentage="44" class="bar purpleBarFlat"></div><b>Delta</b></li>
-        </ul>
-    </div>
-</div>
- -->
-
-  <!-- <p>Bacon ipsum do lor amet porchetta jowl jerky short loin, tri-tip flank c ow. Strip steak meat ball picanha t-bone pork loin filet mignon, pancetta jerky kielba sa sirloin ball t ip hamburger turkey pork belly ham hock. Chicken swine tail s pa re ribs,pork loin tongue picanha strip steak ribeye pancetta bresaola landjaeger flank ham shank.</p> 
-
-<h3>Just add more bars, they sqeeze in. Sweet!</h3>
-
-<div class="chartBarsWrap">
-    <div class="chartBars chartBars3">
-        <ul class="numbers">
-            <li><span>100%</span></li>
-            <li><span>80%</span></li>
-            <li><span>60%</span></li>
-            <li><span>40%</span></li>
-            <li><span>20%</span></li>
-            <li><span>0%</span></li>
-        </ul>
-        <ul class="bars">
-            <li><div data-percentage="92" class="bar greenBar trigger"></div><b>Alpha</b></li>
-            <li><div data-percentage="33" class="bar blueBar trigger"></div><b>Beta</b></li>
-            <li><div data-percentage="64" class="bar orangeBar trigger"></div><b>Gamma</b></li>
-            <li><div data-percentage="41" class="bar purpleBar trigger"></div><b>Delta</b></li>
-            <li><div data-percentage="52" class="bar greenBar trigger"></div><b>Epsilon</b></li> 
-            <li><div data-percentage="58" class="bar blueBar trigger"></div><b>Zeta</b></li>
-            <li><div data-percentage="65" class="bar orangeBar trigger"></div><b>Eta</b></li>
-            <li><div data-percentage="91" class="bar purpleBar trigger"></div><b>Theta</b></li>
-            <li><div data-percentage="32" class="bar greenBar trigger"></div><b>Iota</b></li>    
-            <li><div data-percentage="68" class="bar blueBar trigger"></div><b>Kappa</b></li>
-        </ul>
-    </div>
-</div>
-
-<p>Bacon ipsum do lor amet porchetta jowl jerky short loin, tri-tip flank c ow. Strip steak meat ball picanha t-bone pork loin filet mignon, pancetta jerky kielba sa sirloin ball t ip hamburger turkey pork belly ham hock. Chicken swine tail s pa re ribs,pork loin tongue picanha strip steak ribeye pancetta bresaola landjaeger flank ham shank.</p>
- -->
+  
   </div>
   <script src="assets/skrollr.min.js"></script>
 
