--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -17,21 +17,28 @@
         <a class="nav__item" href="#">Contact</a>
   
       </div>
-        <div class="card">
-                <div class="card__content">
-                  <div class="card__front">
-                    <h3 class="card__title">Contact Information</h3>
-                    <p class="card__subtitle">Click here to see Information</p>
-                  </div>
-                  <div class="card__back">
-                    <p class="card__body"href="#"><i class="fab fa-facebook"></i>
-                      </p>
-                      <p class="card__body">
-                        </p>
-  
-                  </div>
-                </div>
-              </div>
+      <div class="card">
+        <div class="photo"></div>
+        <div class="banner"></div>
+        <ul>
+            <li><b>John Doe</b></li>
+            <li>Web Developer</li>
+
+        </ul>
+        <button class="contact" id="main-button">click to get in touch</button>
+        <div class="social-media-banner">
+            <a href=""><i class="fa fa-twitter"></i></a>
+            <a href=""><i class="fa fa-facebook"></i></a>
+            <a href=""><i class="fa fa-instagram"></i></a>
+            <a href=""><i class="fa fa-linkedin"></i></a>
+        </div>
+      <form class="email-form">
+            <input id="name" type="text" placeholder="name">
+            <input id="email" type="text" placeholder="email">
+            <textarea id="comment" type="text" placeholder="comment"></textarea>
+            <button class="contact">send</button>
+      </form>
+      </div>
         <div class="bodyOfWork">
          <article class="fade-scroll" id="one" data-color="black"><h1 class="fade-scoll">Hangman</h1><p class="fade-scoll"><a href="projects/word-guess-game/hangman-game/index.html"style="width:42px;height:42px;border:0">
             <img src="images/Hangman.jpg" alt="RPG Game">
