--- a/index.html
+++ b/index.html
@@ -405,13 +405,13 @@
 
     <div data-100-bottom-top="transform: translateY(200px); opacity: 0"
       data-center-top="transform: translateY(0px); opacity: 1">
-      <i class="fab fa-github" href="https://github.com/michaeladamstrickland"></i></i>
+      <a href="https://github.com/michaeladamstrickland"><i class="fab fa-github"></i></a>
       <h4>Git<b>Hub</b></h4>
     </div>
 
     <div data-100-bottom-top="transform: translateX(200px); opacity: 0"
       data-center-top="transform: translateX(0px); opacity: 1">
-      <i class="far fa-file" href="assets/Michael strickland.docx"></i>
+      <a href="assets/Michael strickland.docx"><i class="far fa-file"></i></a>
       <h4>Resume</b></h4>
     </div>
 
