--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div class="nav">
       <a class="nav__item">About</a>
       <a class="nav__item" href="portfolio/portfolio.html">Portfolio</a>
-      <a class="nav__item" href="#">Contact</a>
+    
 
     </div>
   </div>
@@ -274,10 +274,10 @@
             </div>
           </div>
           <div class="bottom">
-            <a href="http://linkedin.com/in/michaeladamstrickland"><i class="fas fa-link"></i>Website</a>
-            <a href="https://michaeladamstrickland.github.io/Portfolio/"><i class="fas fa-share-alt-square"></i>Share</a>
+            <a href="http://linkedin.com/in/michaeladamstrickland"><i class="fas fa-link"></i>Linkedin</a>
+            <a href="https://michaeladamstrickland.github.io/Portfolio/"><i class="fas fa-share-alt-square"></i>Github</a>
             <a href="#"><i class="fas fa-user-plus"></i>Follow</a>
-            <a href="assets/Michael strickland.docx"><i class="fas fa-briefcase"></i>Hire</a>
+            <a href="assets/Michael Strickland resume.pdf"><i class="fas fa-briefcase"></i>Resume</a>
           </div>
         </div>
         <div class="right">
@@ -335,6 +335,7 @@
             <a href="portfolio/portfolio.html">
               <h2>HangMan</h2>
               <p>Hangman is a football style word guess game. guess right and the letter appears. guess wrong too many times and lose.</p>
+            
             </a>
           </div>
         </li>
@@ -380,6 +381,7 @@
         </li>
       </ul>
     </div>
+    <h2>click the images to go to projects page.</h2>
   </div>
 
 
@@ -411,7 +413,7 @@
 
     <div data-100-bottom-top="transform: translateX(200px); opacity: 0"
       data-center-top="transform: translateX(0px); opacity: 1">
-      <a href="assets/Michael strickland.docx"><i class="far fa-file"></i></a>
+      <a href="assets/Michael Strickland resume.pdf"><i class="far fa-file"></i></a>
       <h4>Resume</b></h4>
     </div>
 
