--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -15,9 +15,9 @@
 
 <body>
   <div class="nav">
-    <a class="nav__item" href="../index.html">About</a>
+    <a class="nav__item" href="../index.html">Home</a>
 
-    <a class="nav__item" href="#">Contact</a>
+    
 
   </div>
   <div class="card">
