--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <a href="http://linkedin.com/in/michaeladamstrickland"><i class="fas fa-link"></i>Linkedin</a>
             <a href="https://michaeladamstrickland.github.io/Portfolio/"><i class="fas fa-share-alt-square"></i>Github</a>
             <a href="#"><i class="fas fa-user-plus"></i>Follow</a>
-            <a href="assets/Michael Strickland resume.pdf"><i class="fas fa-briefcase"></i>Resume</a>
+            <a href="assets/Michael Strickland.pdf"><i class="fas fa-briefcase"></i>Resume</a>
           </div>
         </div>
         <div class="right">
@@ -297,7 +297,7 @@
     <div class="body-text">
       
       <h2><img src="assets/images/photo2.jpg" alt="head shot" style="height: 200px; width: 240px"></h2>
-      <h2>My Passion</h2>
+      <h2>Bio</h2>
 
 
       <p data-300-center-top="transform: scale(0.8); opacity: 0"
@@ -413,7 +413,7 @@
 
     <div data-100-bottom-top="transform: translateX(200px); opacity: 0"
       data-center-top="transform: translateX(0px); opacity: 1">
-      <a href="assets/Michael Strickland resume.pdf"><i class="far fa-file"></i></a>
+      <a href="assets/Michael Strickland.pdf"><i class="far fa-file"></i></a>
       <h4>Resume</b></h4>
     </div>
 
