--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <a href="http://linkedin.com/in/michaeladamstrickland"><i class="fas fa-link"></i>Linkedin</a>
             <a href="https://michaeladamstrickland.github.io/Portfolio/"><i class="fas fa-share-alt-square"></i>Github</a>
             <a href="#"><i class="fas fa-user-plus"></i>Follow</a>
-            <a href="assets/Michael Strickland.pdf"><i class="fas fa-briefcase"></i>Resume</a>
+            <a href="assets/Michael Strickland web dev.pdf"><i class="fas fa-briefcase"></i>Resume</a>
           </div>
         </div>
         <div class="right">
@@ -413,7 +413,7 @@
 
     <div data-100-bottom-top="transform: translateX(200px); opacity: 0"
       data-center-top="transform: translateX(0px); opacity: 1">
-      <a href="assets/Michael Strickland.pdf"><i class="far fa-file"></i></a>
+      <a href="assets/Michael Strickland web dev.pdf"><i class="far fa-file"></i></a>
       <h4>Resume</b></h4>
     </div>
 
