--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -17,7 +17,7 @@
   <div class="nav">
     <a class="nav__item" href="../index.html">Home</a>
 
-    
+
 
   </div>
   <div class="card">
@@ -45,7 +45,7 @@
   <div class="bodyOfWork">
     <article class="fade-scroll" id="one" data-color="black">
       <h1 class="fade-scoll">Hangman</h1>
-      <p class="fade-scoll"><a href="projects/word-guess-game/hangman-game/index.html"
+      <p class="fade-scoll"><a href="https://michaeladamstrickland.github.io/word-guess-game/"
           style="width:42px;height:42px;border:0">
           <img src="images/Hangman.jpg" alt="RPG Game">
         </a>Hangman is a football style word guess game. guess right and the letter appears. guess wrong too many times
@@ -53,50 +53,67 @@
       <div class="clear"></div>
     </article>
   </div>
-  <article id="two" data-color="#7f3995">
-    <h1>Trivia Game</h1>
-    <p> <a href="projects/TriviaGame/index.html" style="width:42px;height:42px;border:0">
-        <img src="images/wordGuess.jpg" alt="Trivia Game">
-      </a>This is a NBA style TriviaGame intended tp test your basketball knowledge</p>
-    <div class="clear"></div>
-  </article>
-
-  <article id="three" data-color="#0d78e7">
-    <h1>Giftastic</h1>
-    <p> <a href="projects/GifTastic/index.html" style="width:42px;height:42px;border:0">
-        <img src="images/giftastic.jpg" alt="Rutgers Info Widget">
-      </a>This is a fun app that generates funny gifs to keep you entertained for hours.</p>
-    <div class="clear"></div>
-  </article>
-
   <article id="four" data-color="#f88f18">
-    <h1>Rock</h1>
-    <h1>Paper</h1>
-    <h1>Scissors</h1>
-    <p><a href="projects/RockPaperScissors2/index.html" style="width:42px;height:42px;border:0"> <img
-          src="images/rps.jpg" alt="Rock Paper Scissors"></a>
-      <p>This is a game of chance that you get to play against the computer.</p>
+    <h1>Beach</h1>
+    <h2>Resort</h2>
+    <p><a href="https://strickland-resort-hotel.netlify.com/" style="width:42px;height:42px;border:0"> <img
+          src="https://cdn.pixabay.com/photo/2015/01/26/11/05/beach-612553__480.jpg" alt="Rock Paper Scissors"></a>
+      <p>This Beach Resort app is a full MERN application that uses front-end and back-end technology. I used React.js, Bootstrap, css, and Javascript for the front-end, and used JSK, JavaScript, Contentful, NPM, Git, and Netlify for the back-end. This application is hosted using Netlify, and GitHub.</p>
       <div class="clear"></div>
   </article>
+</div>
+  <div>
+    <article id="two" data-color="#7f3995">
+      <h1>Trivia Game</h1>
+      <p> <a href="https://michaeladamstrickland.github.io/TriviaGame/" style="width:42px;height:42px;border:0">
+          <img src="images/wordGuess.jpg" alt="Trivia Game">
+        </a>This is a NBA style TriviaGame intended tp test your basketball knowledge</p>
+      <div class="clear"></div>
+    </article>
+  </div>
+  <div>
+    <article id="three" data-color="#0d78e7">
+      <h1>Giftastic</h1>
+      <p> <a href="https://michaeladamstrickland.github.io/GifTastic/" style="width:42px;height:42px;border:0">
+          <img src="images/giftastic.jpg" alt="Rutgers Info Widget">
+        </a>This is a fun app that generates funny gifs to keep you entertained for hours.</p>
+      <div class="clear"></div>
+    </article>
+  </div>
+  <div>
+    <article id="four" data-color="#f88f18">
+      <h2>Rock</h2>
+      <h2>Paper</h2>
+      <h2>Scissors</h2>
+      <p><a href="https://michaeladamstrickland.github.io/RockPaperScissors2/" style="width:42px;height:42px;border:0"> <img
+            src="images/rps.jpg" alt="Rock Paper Scissors"></a>
+        <p>This is a game of chance that you get to play against the computer.</p>
+        <div class="clear"></div>
+    </article>
+  </div>
+  <div>
+   
+  <div>
 
-  <article id="five" data-color="#E91E63">
-    <h1>The Office</h1>
-    <h1>Fan Page</h1>
-    <p class="fade-scoll"><a href="projects/Group-project/index.html" style="width:42px;height:42px;border:0">
-        <img src="images/theOffice.jpg" alt="RPG Game">
-      </a>
-      <p>This is a fun site that gives the fans everything they want and love about the TV show "The Office".</p>
-      <div class="clear"></div>
-  </article>
-
-  <article id="four" data-color="#f88f18">
-    <h1>Eye</h1>
-    <h1>Management</h1>
-    <p><a href="https://michaeladamstrickland.github.io/project-2/" style="width:42px;height:42px;border:0"> <img
-          src="images/vision.png" alt="Rock Paper Scissors"></a>
-      <p>Eye Managment is an inventory app that connects distributors and clients directly.</p>
-      <div class="clear"></div>
-  </article>
+    <article id="five" data-color="#E91E63">
+      <h1>The</h1>
+      <h2>Office</h2>
+      <p class="fade-scoll"><a href="https://lindsay303.github.io/Group-project/" style="width:42px;height:42px;border:0">
+          <img src="images/theOffice.jpg" alt="RPG Game">
+        </a>
+        <p>This is a fun site that gives the fans everything they want and love about the TV show "The Office".</p>
+        <div class="clear"></div>
+    </article>
+  </div>
+  <div>
+    <article id="one" data-color="black">
+      <h1>Eye</h1>
+      <h2>Management</h2>
+      <p><a href="https://michaeladamstrickland.github.io/project-2/" style="width:42px;height:42px;border:0"> <img
+            src="images/vision.png" alt="Rock Paper Scissors"></a>
+        <p>Eye Managment is an inventory app that connects distributors and clients directly.</p>
+        <div class="clear"></div>
+    </article>
 
 
   </div>
