new resume and media

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -10,6 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.js"></script>
   <title>practice</title>
   <link rel="stylesheet" href="main.js">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="main.js"></script>
 </head>
 
