--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <link href="assets/demo.css" rel="stylesheet">
   <link href="assets/header.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
   <style>
